test/classes/initializers/compilerGenerated/dflt-ctor-generic-uninit-field-param-err-1.chpl


class A {
  param p;
}

var x = new borrowed A();
